[gd_scene load_steps=20 format=3 uid="uid://ca3p8uvuro2bl"]

[ext_resource type="Script" path="res://scripts/enemies_AI/enemy_bluebird.gd" id="1_0h57b"]
[ext_resource type="Texture2D" uid="uid://o6xrx8qana6a" path="res://textures/enemies/bluebird/Flying (32x32).png" id="1_km3tn"]
[ext_resource type="Texture2D" uid="uid://lmneuybyorlc" path="res://textures/enemies/bluebird/Hit (32x32).png" id="2_303iw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_am4lb"]
size = Vector2(55, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohbwe"]
atlas = ExtResource("1_km3tn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvywl"]
atlas = ExtResource("1_km3tn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qso1i"]
atlas = ExtResource("1_km3tn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly4od"]
atlas = ExtResource("1_km3tn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6ceu"]
atlas = ExtResource("1_km3tn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jod05"]
atlas = ExtResource("1_km3tn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v44jw"]
atlas = ExtResource("1_km3tn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbow8"]
atlas = ExtResource("1_km3tn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17oir"]
atlas = ExtResource("1_km3tn")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4ep2"]
atlas = ExtResource("2_303iw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1em6"]
atlas = ExtResource("2_303iw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pknxq"]
atlas = ExtResource("2_303iw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jeti"]
atlas = ExtResource("2_303iw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcsnl"]
atlas = ExtResource("2_303iw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r0yjr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohbwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvywl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qso1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly4od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6ceu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jod05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v44jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbow8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17oir")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4ep2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1em6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pknxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jeti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcsnl")
}],
"loop": true,
"name": &"dying",
"speed": 15.0
}]

[node name="enemy_bluebird" type="CharacterBody2D"]
position = Vector2(2102, 1376)
script = ExtResource("1_0h57b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_am4lb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_r0yjr")
animation = &"dying"
autoplay = "default"

[node name="collision_left_1" type="RayCast2D" parent="."]
position = Vector2(-20, 17)
rotation = 1.5708
target_position = Vector2(0, 10)

[node name="collision_left_2" type="RayCast2D" parent="."]
position = Vector2(-20, -2)
rotation = 1.5708
target_position = Vector2(0, 10)

[node name="collision_right_1" type="RayCast2D" parent="."]
position = Vector2(18, 17)
rotation = 4.71239
target_position = Vector2(0, 10)

[node name="collision_right_2" type="RayCast2D" parent="."]
position = Vector2(19, -5)
rotation = 4.71239
target_position = Vector2(0, 10)

[node name="collision_up_1" type="RayCast2D" parent="."]
position = Vector2(-27, -11)
target_position = Vector2(0, -10)

[node name="collision_up_2" type="RayCast2D" parent="."]
position = Vector2(26, -11)
target_position = Vector2(0, -10)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
